--- a/styles.css
+++ b/styles.css
@@ -32,8 +32,13 @@
 html,
 body {
   font-family: "Ubuntu", sans-serif;
-  font-family: "Overpass", sans-serif;
   font-size: 16px;
+}
+
+h1,
+h2,
+h3 {
+  font-family: "Overpass", sans-serif;
 }
 
 h1 {
@@ -42,10 +47,18 @@ h1 {
 
 h2 {
   font-size: 2rem;
+  color: var(--very-dark-blue);
 }
 
-h2 {
+h3 {
   font-size: 1.8rem;
+  color: var(--very-dark-blue);
+}
+
+p {
+  font-size: 0.8rem;
+  line-height: 1.8;
+  color: var(--very-dark-grayish-blue);
 }
 
 body {
@@ -55,6 +68,8 @@ body {
   justify-content: center;
   width: 100%;
 }
+
+/* HEADER */
 
 header {
   width: 100%;
@@ -74,8 +89,95 @@ header {
   border-radius: 0 0 0 80px;
 }
 
+header p {
+  color: var(--white);
+  font-size: 1rem;
+}
+
 nav {
   margin-bottom: 50px;
+  width: 100%;
+  display: flex;
+  align-items: center;
+}
+
+nav .logo {
+  width: 120px;
+  margin-right: 30px;
+}
+
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropbtn {
+  background-color: transparent;
+  color: var(--white);
+  opacity: 0.7;
+  margin: 25px 15px;
+  font-size: 1rem;
+  font-weight: 700;
+  border-bottom: 2px solid transparent;
+  outline: none;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.dropbtn img {
+  margin-left: 7px;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: var(--white);
+  min-width: 180px;
+  border-radius: 7px;
+  font-size: 0.9rem;
+  font-weight: 500;
+  text-align: left;
+  padding: 20px 10px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown-content a:hover {
+  font-weight: 700;
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropbtn:hover {
+  opacity: 1;
+  border-bottom: 2px solid var(--white);
+}
+
+.dropdown:hover .dropbtn {
+  opacity: 1;
+  border-bottom: 2px solid var(--white);
+}
+
+.dropdown:hover .dropbtn img {
+  opacity: 1;
+  transform: scaleY(-1);
+}
+
+.user-menu {
+  margin-left: auto;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .introduction {
@@ -83,8 +185,53 @@ nav {
 }
 
 .introduction p {
-  margin-bottom: 30px;
+  margin-top: 15px;
+  margin-bottom: 40px;
 }
+
+.btn {
+  font-size: 1rem;
+  font-weight: 700;
+  border-radius: 100px;
+  padding: 15px;
+  min-width: 140px;
+  border: none;
+  outline: none;
+  margin-right: 10px;
+  cursor: pointer;
+}
+
+.btn.btn-white {
+  background-color: var(--white);
+  color: var(--light-red);
+  border: 1px solid var(--light-red);
+}
+
+.btn.btn-white:hover,
+.btn.btn-white:focus {
+  background-color: #ff677a;
+  color: var(--white);
+  border: 1px solid #ff677a;
+}
+
+.btn.btn-outline {
+  background-color: transparent;
+  color: var(--white);
+  border: 1px solid var(--white);
+}
+
+.btn.btn-outline:hover,
+.btn.btn-outline:focus {
+  background-color: var(--white);
+  color: var(--light-red);
+  border: 1px solid var(--light-red);
+}
+
+.btn.btn-white.signup {
+  margin-left: 10px;
+}
+
+/* MAIN */
 
 main {
   padding: 60px 150px;
@@ -98,10 +245,23 @@ article div {
   margin-bottom: 40px;
 }
 
+/* MAIN ARTICLE 1 */
+
 .article-1 h2 {
   text-align: center;
   margin: 50px 0;
 }
+
+.article-body {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+}
+
+.img-editor {
+  overflow: hidden;
+}
+
+/* MAIN ARTICLE 1 */
 
 .article-2 {
   margin-bottom: 30px;
