--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,6 @@ body {
   flex-direction: column;
   align-items: flex-start;
   justify-content: center;
-  width: 100%;
 }
 
 /* HEADER */
@@ -80,9 +79,9 @@ header {
   background-image: url("images/bg-pattern-intro.svg");
   background-image: url("images/bg-pattern-intro.svg"),
     linear-gradient(to right, var(--very-light-red), var(--light-red));
-  background-position: center top, left top;
+  background-position: 26% 50%, left top;
   background-repeat: no-repeat, no-repeat;
-  background-size: 50%, contain;
+  background-size: 225%, contain;
   padding: 60px 150px;
   color: var(--white);
   text-align: center;
@@ -234,7 +233,7 @@ nav .logo {
 /* MAIN */
 
 main {
-  padding: 60px 150px;
+  padding: 60px 0;
 }
 
 main h3 {
@@ -247,29 +246,122 @@ article div {
 
 /* MAIN ARTICLE 1 */
 
+.article-1 {
+  padding: 70px 150px;
+  width: 100%;
+  overflow: hidden;
+}
+
 .article-1 h2 {
   text-align: center;
   margin: 50px 0;
 }
 
 .article-body {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  flex-direction: column;
+  position: relative;
 }
 
-.img-editor {
-  overflow: hidden;
+.article-body .text {
+  width: 40%;
 }
 
-/* MAIN ARTICLE 1 */
+.article-body .img-editor {
+  position: absolute;
+  right: -350px;
+  top: -200px;
+}
+
+.article-body .img-editor img {
+  width: 750px;
+}
+
+/* MAIN ARTICLE 2 */
 
 .article-2 {
-  margin-bottom: 30px;
+  padding: 50px 150px;
+  width: 100%;
+  height: 340px;
+  margin-top: 60px;
+  margin-bottom: 100px;
+  background-image: url("images/bg-pattern-circles.svg");
+  background-image: url("images/bg-pattern-circles.svg"),
+    linear-gradient(
+      to right,
+      var(--very-dark-gray-blue),
+      var(--very-dark-desaturated-blue)
+    );
+  background-repeat: no-repeat;
+  background-position: -50% 80%;
+  border-radius: 0 100px 0 100px;
+  position: relative;
+  display: flex;
+  align-items: center;
 }
 
-.article-2 h2 {
-  margin: 50px 0 20px 0;
+.article-2 .text h2,
+.article-2 .text p {
+  color: var(--white);
 }
+
+.article-2 .img-phones {
+  position: absolute;
+  top: -50px;
+  left: 100px;
+}
+
+.article-2 .img-phones img {
+  width: 450px;
+}
+
+.article-2 .text {
+  width: 50%;
+  margin-left: auto;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+/* MAIN ARTICLE 2 */
+
+.article-3 {
+  padding: 50px 150px;
+  width: 100%;
+  height: 800px;
+  margin-top: 60px;
+  margin-bottom: 60px;
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.article-3 .img-laptop {
+  position: absolute;
+  top: 0;
+  left: -275px;
+}
+
+.article-3 .text {
+  width: 50%;
+  margin-left: auto;
+  margin-right: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+/* FOOTER */
+
+footer {
+  padding: 50px 150px;
+  background-color: var(--very-dark-black-blue);
+  border-radius: 0 80px 0 0;
+  color: var(--white);
+  width: 100%;
+  height: 200px;
+}
+
+/* Attribution */
 
 .attribution {
   font-size: 11px;
